# Cardinal-Perception

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  dlo-license  num_lines.sh  package.xml
.github/docker/: Dockerfile
.github/workflows/: ros-ci.yaml
cmake/: Config.cmake  config.hpp.in
config/: dlo.yaml  localization.yaml  params.yaml  perception.json  perception.yaml  tag_detection.yaml
doc/: architecture.md  config.md
include/: accumulator_map.hpp  cloud_ops.hpp  conversions.hpp  cycle_buffer.hpp  d_ary_heap.hpp  exploration_octree.hpp  geometry.hpp  imu_integrator.hpp  imu_transform.hpp  kfc_map.hpp  ldrf_detector.hpp  lf_detector.hpp  map_octree.hpp  meta_grid.hpp  metrics_manager.hpp  path_planner.hpp  point_def.hpp  pub_map.hpp  scan_preprocessor.hpp  selection_octree.hpp  spin_buffer.hpp  synchronization.hpp  trajectory_filter.hpp  transform_sync.hpp  traversibility_def.hpp  traversibility_gen.hpp  tsq.hpp  ue_octree.hpp  util.hpp
include/aruco/: tag_detector.h  tag_detector.hpp  tag_detector_impl.hpp
include/dlo/: dlo.h  map.h  odom.h  utils.h
include/ikd_tree/: ikd_tree.hpp  ikd_tree_impl.hpp
include/modules/: accumulator_map.hpp  imu_integrator.hpp  kfc_map.hpp  lf_detector.hpp  lidar_odom.hpp  map_octree.hpp  path_plan_map.hpp  path_planner.hpp  scan_preprocessor.hpp  selection_octree.hpp  trajectory_filter.hpp  transform_sync.hpp  traversibility_gen.hpp  ue_octree.hpp
include/modules/impl/: kfc_map_impl.hpp  lf_detector_impl.hpp  lidar_odom_impl.hpp  map_octree_impl.hpp  path_planner_impl.hpp  traversibility_gen_impl.hpp
include/nano_gicp/: lsq_registration.hpp  nano_gicp.hpp  nanoflann.hpp
include/nano_gicp/gicp/: gicp_settings.hpp  so3.hpp
include/nano_gicp/impl/: lsq_registration_impl.hpp  nano_gicp_impl.hpp  nanoflann_impl.hpp
include/profiling/: profiling.hpp
include/stats/: stats.hpp
include/synchronization2/: Makefile  main.cpp  rss.hpp
include/util/: cloud_ops.hpp  d_ary_heap.hpp  geometry.hpp  meta_grid.hpp  pub_map.hpp  ros_utils.hpp  std_utils.hpp  synchronization.hpp  time_cvt.hpp  time_search.hpp
launch/: cardinal_perception.launch.py  dlo.launch.py  perception.launch.py  perception_launch_utils.py
msg/: MiningEvalResults.msg  ProcessMetrics.msg  ReflectorHint.msg  TagsTransform.msg  ThreadMetrics.msg  TraceNotification.msg  TraceNotifications.msg  TrajectoryFilterDebug.msg
src/: aruco_node.cpp  config.hpp  frontend.cpp  localization_node.cpp  node.cpp  perception_node.cpp  pplan_client_node.cpp  tag_detection_node.cpp  todo.txt
src/aruco/: tag_detector.cpp
src/core/: localization.cpp  mapping.hpp  metrics.hpp  odometry.cpp  odometry.hpp  path_planning.hpp  perception.cpp  perception.hpp  perception_core.cpp  perception_presets.hpp  perception_threads.cpp  precomp.cpp  scan_preprocessor.hpp  tag_detection.cpp  tag_detection.hpp  todo.txt  transform_sync.hpp
src/core/modules/: kfc_map.cpp  lf_detector.cpp  lidar_odom.cpp  map_octree.cpp  path_planner.cpp  traversibility_gen.cpp
src/core/threads/: imu_worker.cpp  imu_worker.hpp  localization_worker.cpp  localization_worker.hpp  mapping_worker.cpp  mapping_worker.hpp  mining_eval_worker.cpp  mining_eval_worker.hpp  path_planning_worker.cpp  path_planning_worker.hpp  shared_resources.hpp  traversibility_worker.cpp  traversibility_worker.hpp
src/dlo/: map.cc  map.cpp  map_node.cc  map_node.cpp  odom.cc  odom.cpp  odom_node.cc  odom_node.cpp
src/engine/: dlodom.cpp  localization.cpp  localization.hpp  odometry.cpp  perception.cpp  perception.hpp  stats.cpp  tag_detection.cpp  tag_detection.hpp  tagdetection.cpp  todo.txt
src/engine/debug/: metric_pub_map.hpp  pub_map.hpp
src/ikd_tree/: ikd_tree.cpp
src/modules/: kfc_map.cpp  lfd.cpp  map_octree.cpp  path_planner.cpp  traversibility_gen.cpp
src/nano_gicp/: lsq_registration.cc  lsq_registration.cpp  nano_gicp.cc  nano_gicp.cpp  nanoflann.cc  nanoflann.cpp
src/profiling/: profiling.cpp
src/stats/: stats.cpp
srv/: UpdateMiningEvalMode.srv  UpdatePathPlanningMode.srv
